--- a/css/main.css
+++ b/css/main.css
@@ -356,6 +356,9 @@ html {
 }
 
 body {
+  background-image: url("./../images/23767178_0_160_3073_1888_600x0_80_0_0_7d8fb515e0dca4daff8d8ae4cc7ceed6.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -394,189 +397,9 @@ img {
   padding: 0 20px;
 }
 
-.button {
-  display: inline-block;
-  padding: 8px 16px;
-  text-decoration: none;
-  color: white;
-  background-color: dodgerblue;
-  border-radius: 5px;
-}
-
-.site-header {
-  padding: 8px 0;
-  -webkit-box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
-}
-
-.site-header__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.site-header__logo {
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-}
-
-.site-header__nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  white-space: nowrap;
-}
-
-.site-header__nav-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  margin-right: 10px;
-}
-
-.site-header__nav-link {
-  padding: 16px;
-  text-decoration: none;
-  color: black;
-}
-
-.site-header__hamburger {
-  border: none;
-  background-color: transparent;
-  display: none;
-  cursor: pointer;
-  width: 20px;
-  height: 20px;
-  background-image: url("../images/bars-solid.svg");
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-@media only screen and (max-width: 730px) {
-  .site-header {
-    padding: 18px 0;
-    position: relative;
-  }
-  .site-header__nav {
-    display: none;
-  }
-  .site-header__hamburger {
-    display: inline-block;
-  }
-  .site-header--open .site-header__nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    position: absolute;
-    padding: 20px;
-    top: 100%;
-    left: 0;
-    background-color: #1e90ff;
-    width: 100%;
-  }
-  .site-header--open .site-header__nav-list {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .site-header--open .button {
-    background-color: orange;
-  }
-  .site-header--open .site-header__hamburger {
-    background-image: url("../images/xmark-solid.svg");
-  }
-}
-
 .main {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-}
-
-.hero {
-  padding: 80px 0px;
-}
-
-.hero__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.hero__left {
-  max-width: 470px;
-}
-
-.hero__heading {
-  margin: 0;
-  margin-bottom: 16px;
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 130%;
-}
-
-.hero__desc {
-  margin: 0;
-  margin-bottom: 16px;
-  line-height: 24px;
-}
-
-.hero__iframe {
-  border: none;
-  border-radius: 10px;
-}
-
-@media only screen and (max-width: 980px) {
-  .hero {
-    padding: 40px 0px;
-  }
-  .hero__container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .hero__left {
-    max-width: 100%;
-  }
-  .hero__iframe {
-    margin-top: 20px;
-    width: 100%;
-  }
-}
-
-@media only screen and (max-width: 480px) {
-  .hero__heading {
-    font-size: 25px;
-  }
-  .hero__desc {
-    font-size: 14px;
-  }
 }
 /*# sourceMappingURL=main.css.map */
