--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -11,6 +11,9 @@ html {
 }
 
 body {
+  background-image: url("./../images/23767178_0_160_3073_1888_600x0_80_0_0_7d8fb515e0dca4daff8d8ae4cc7ceed6.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   height: 100%;
